--- a/atmosphereWindy/examples/wind-v7.html
+++ b/atmosphereWindy/examples/wind-v7.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="../plugin/openlayers/ol.css" />
 		<link rel="stylesheet" type="text/css" href="../css/timeline.css" />
 		<link rel="stylesheet" type="text/css" href="../css/layerItem.css" />
-        <link rel="stylesheet" type="text/css" href="../../wind-v6.0/jquery/cityselect.css">
+        <!-- <link rel="stylesheet" type="text/css" href="../../wind-v6.0/jquery/cityselect.css"> -->
 
 		<script src="../plugin/jquery/jquery3.3.1.js"></script>
 		<script src="../plugin/openlayers/ol.js"></script>
@@ -20,11 +20,17 @@
         <script src="../plugin/windy/MapModel.js"></script>
         <script src="../plugin/windy/Windy.js"></script>
 
-        <script src="../../wind-v6.0/jquery/colorConfig.js"></script>
+		<script src="../plugin/dist/colorConfig.js"></script>
+        <!-- <script src="../../wind-v6.0/jquery/citySelect.js"></script> -->
+        <script src="../plugin/d3/d3.js"></script>
+        <script src="../plugin/dist/Highcharts-7.2.2/code/highcharts.js"></script>
+        <script src="../plugin/dist/Highcharts-7.2.2/code/highcharts-more.js"></script>
+
+        <!-- <script src="../../wind-v6.0/jquery/colorConfig.js"></script>
         <script src="../../wind-v6.0/jquery/citySelect.js"></script>
         <script src="../../wind-v6.0/jquery/d3.js"></script>
         <script src="../../wind-v6.0/plugin/Highcharts-7.0.3/code/highcharts.js"></script>
-        <script src="../../wind-v6.0/plugin/Highcharts-7.0.3/code/highcharts-more.js"></script>
+        <script src="../../wind-v6.0/plugin/Highcharts-7.0.3/code/highcharts-more.js"></script> -->
 		<title>wind改良版</title>
 		<style>
 			ul,
